--- a/sub4_community/community.css
+++ b/sub4_community/community.css
@@ -73,6 +73,7 @@ body{
 
 /*banner*/
 #banner1{ width:100%; height:400px; margin-bottom:150px;}
+#banner1 img {width:100%;}
 
 h1{
 	font-family:'Belleza', sans-serif;
