--- a/sub4_community/community.css
+++ b/sub4_community/community.css
@@ -1,278 +1,395 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Belleza&display=swap');
 
-
-*{margin:0; padding:0;}
-ul{list-style:none;}
-a{text-decoration:none; color:#000;}
-	
-body{
-	font-family:'Noto Sans CJK Regular';
-	font-size:14px;
-	line-height:24px;
-	background:#fefcf4;
+* {
+  margin: 0;
+  padding: 0;
 }
-	
-	
+ul {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+body {
+  font-family: 'Noto Sans CJK Regular';
+  font-size: 14px;
+  line-height: 24px;
+  background: #fefcf4;
+}
+
 /*header*/
-#header{width:100%; 
-		height:78px; 
-		
-		position:fixed;
-		top:0;
-		left:0;
-		z-index:99;
+#header {
+  width: 100%;
+  height: 78px;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
 }
 
-.header_inner{width:1200px; 
-			margin:0 auto; 
-			position:relative; 
+.header_inner {
+  width: 1200px;
+  margin: 0 auto;
+  position: relative;
 }
 
-.logo{position:absolute; top:0; left:0; z-index:2; padding-top:20px; width:15%;}
-
-.nav{position:absolute; top:0; left:200px; z-index:2; width:70%; }
-.nav>li{
-	float:left;
-	position:relative;
-
-}
-.nav>li>a{
-	display:block;
-			font-size:18px;
-			font-weight:bold;
-			padding:27px 50px;
-			color:#000;			
-}
-.nav li:hover{background:rgba(255,255,255,0.6);}
-.nav li a:hover{font-weight:900;}
-
-.sub li a{
-	display:block;
-	background:rgba(255,255,255,0.6);
-	text-align:center;
-	padding:10px 0;
-	font-size:16px;
+.logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  padding-top: 20px;
+  width: 15%;
 }
 
-.sub{
-	width:100%;
-	position:absolute;
-	top:78px;
-	left:0;
-	display:none;
-	
+.nav {
+  position: absolute;
+  top: 0;
+  left: 200px;
+  z-index: 2;
+  width: 70%;
 }
-.naon{font-weight:600;}
-.icon{position:absolute; top:0; right:0; z-index:2; width:15%;}
-.icon li{float:left;}
-.icon li a{
-	display:block;
-	padding:27px 15px;
+.nav > li {
+  float: left;
+  position: relative;
+}
+.nav > li > a {
+  display: block;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 27px 50px;
+  color: #000;
+}
+.nav li:hover {
+  background: rgba(255, 255, 255, 0.6);
+}
+.nav li a:hover {
+  font-weight: 900;
+}
+
+.sub li a {
+  display: block;
+  background: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  padding: 10px 0;
+  font-size: 16px;
+}
+
+.sub {
+  width: 100%;
+  position: absolute;
+  top: 78px;
+  left: 0;
+  display: none;
+}
+.naon {
+  font-weight: 600;
+}
+.icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  width: 15%;
+}
+.icon li {
+  float: left;
+}
+.icon li a {
+  display: block;
+  padding: 27px 15px;
 }
 
 /*banner*/
-#banner1{ width:100%; height:400px; margin-bottom:150px;}
-#banner1>img{width:100%;}
-
-h1{
-	font-family:'Belleza', sans-serif;
-	font-size:42px;
-	color:#de645e;
-	padding-bottom:50px;
+#banner1 {
+  width: 100%;
+  height: 400px;
+  margin-bottom: 150px;
+}
+#banner1 > img {
+  width: 100%;
 }
 
-#title{
-	width:100%;
-	text-align:center;
-	margin:0 auto; width:1200px;
-	height:280px;
+h1 {
+  font-family: 'Belleza', sans-serif;
+  font-size: 42px;
+  color: #de645e;
+  padding-bottom: 50px;
 }
 
-.link1{width:100%; margin:50px 0 200px 0; z-index:99;}
-.link1 li{float:left; width:33.3%; }
-.link1 li a{
-	display:block;
-	font-size:20px;
-	border-bottom:2px solid #f5989d;
-
-	color:#000;
-
-	
-}
-.link1 li:hover{
-	font-weight:bold;
-	border-bottom:4px solid #f5989d;
-	color:#fff;
+#title {
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  width: 1200px;
+  height: 280px;
 }
 
-.on{font-weight:bold; border-bottom:4px solid #f5989d;
-	}
-
-#promotion{
-	width:1200px;
-	margin:0 auto;
-	text-align:center;
-	height:1400px;
+.link1 {
+  width: 100%;
+  margin: 50px 0 200px 0;
+  z-index: 99;
+}
+.link1 li {
+  float: left;
+  width: 33.3%;
+}
+.link1 li a {
+  display: block;
+  font-size: 20px;
+  border-bottom: 2px solid #f5989d;
+  color: #000;
+}
+.link1 li:hover {
+  font-weight: bold;
+  border-bottom: 4px solid #f5989d;
+  color: #fff;
 }
 
-h2{font-family:'Belleza', sans-serif;
-	padding:50px 0;
-	clear:both;
-	font-size:30px;
-	}
-
-.prolink{padding:0 148px;}
-.prolink li{float:left; border:1px solid #000; margin:30px 50px 40px 0;}
-.prolink li img{display:block; width:400px; height:400px;}
-.prolink li a{
-	display:block;
-	
-	text-align:left;
-	line-height:26px;
-}
-.prolink li p{padding:5px 0 5px 10px;}
-
-
-.prolink li:nth-child(2) a{padding-right:0;}
-.prolink li:nth-child(4) a{padding-right:0;}
-
-.title{
-	font-size:12px;
-	color:#f5989d;
-	font-weight:600;
+.on {
+  font-weight: bold;
+  border-bottom: 4px solid #f5989d;
 }
 
-.big{font-size:18px;
-font-weight:600;}
-
-.more{
-	color:#de645e;
-font-size:13px;}
-
-.more:hover{font-weight:600;}
-
-.next{clear:both; 
-padding-top:100px; 
-color:#000; 
-font-size:16px; 
-
-text-align:center;
-padding-left:40%;
+#promotion {
+  width: 1200px;
+  margin: 0 auto;
+  text-align: center;
 }
 
-.next li{float:left;}
-.next li img{width:10px;}
-.next li a{
-	display:block;
-padding:0 20px;}
+h2 {
+  font-family: 'Belleza', sans-serif;
+  padding: 50px 0;
+  clear: both;
+  font-size: 30px;
+}
 
+.prolink {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.prolink li {
+  border: 1px solid #000;
+  margin: 30px 50px 40px 0;
+}
+.prolink li img {
+  display: block;
+  width: 400px;
+  height: 400px;
+}
+.prolink li a {
+  display: block;
 
-.non{font-weight:600;}
+  text-align: left;
+  line-height: 26px;
+}
+.prolink li p {
+  padding: 5px 0 5px 10px;
+}
 
-.next li a:hover{font-weight:600;}
+.prolink li:nth-child(2) a {
+  padding-right: 0;
+}
+.prolink li:nth-child(4) a {
+  padding-right: 0;
+}
 
+.title {
+  font-size: 12px;
+  color: #f5989d;
+  font-weight: 600;
+}
+
+.big {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.more {
+  color: #de645e;
+  font-size: 13px;
+}
+
+.more:hover {
+  font-weight: 600;
+}
+
+.next {
+  clear: both;
+  padding-top: 100px;
+  color: #000;
+  font-size: 16px;
+
+  text-align: center;
+  padding-left: 40%;
+}
+
+.next li {
+  float: left;
+}
+.next li img {
+  width: 10px;
+}
+.next li a {
+  display: block;
+  padding: 0 20px;
+}
+
+.non {
+  font-weight: 600;
+}
+
+.next li a:hover {
+  font-weight: 600;
+}
 
 /*magazine*/
 
-
-#title2{
-	margin:0 auto;
-	text-align:center;
-height:130px;
-width:1200px;
+#title2 {
+  margin: 0 auto;
+  text-align: center;
+  height: 130px;
+  width: 1200px;
 }
 
-.magazine{height:500px; text-align:center;}
-.bottom{
- margin:0 auto;
- position:relative;
- height:900px;
- text-align:center;
- padding-bottom:200px;
- }
- 
-.mimg{
-	background:url(../images/main_mz3.png) no-repeat;
-	position:absolute;
-top:200px; right:600px;
-height:445px;
-width:310px;
- transition:background 2s
-
+.magazine {
+  height: 500px;
+  text-align: center;
+}
+.bottom {
+  margin: 0 auto;
+  position: relative;
+  height: 900px;
+  text-align: center;
+  padding-bottom: 200px;
 }
 
-.mimg:hover{background:url(../images/main_mz3hover.png) no-repeat;
-transition:all 3s liner;
+.mimg {
+  background: url(../images/main_mz3.png) no-repeat;
+  position: absolute;
+  top: 200px;
+  right: 600px;
+  height: 445px;
+  width: 310px;
+  transition: background 2s;
 }
 
-.mtext{
-	position:absolute;
-    top:300px; left:600px;
-}
-.mp2{font-size:16px;}
-
-
-.mh4{font-size:35px;
-font-weight:800;
-padding-top:180px;}
-
-.mbox{width:100%;
-	height:200px;
-	background:#f7938d;
-	position:absolute;
-	top:500px;
-left:0;
+.mimg:hover {
+  background: url(../images/main_mz3hover.png) no-repeat;
+  transition: all 3s liner;
 }
 
+.mtext {
+  position: absolute;
+  top: 300px;
+  left: 600px;
+}
+.mp2 {
+  font-size: 16px;
+}
 
-.mp:hover{font-weight:600;}
-.mp{text-align:center; width:315px;  }
+.mh4 {
+  font-size: 35px;
+  font-weight: 800;
+  padding-top: 180px;
+}
 
-.mcircle{position:absolute;
-top:220px;
-left:500px;}
+.mbox {
+  width: 100%;
+  height: 200px;
+  background: #f7938d;
+  position: absolute;
+  top: 500px;
+  left: 0;
+}
 
+.mp:hover {
+  font-weight: 600;
+}
+.mp {
+  text-align: center;
+  width: 315px;
+}
+
+.mcircle {
+  position: absolute;
+  top: 220px;
+  left: 500px;
+}
 
 /*lookbook*/
-#lookbook{width:1200px; margin:0 auto;}
-#banner2{height:550px;}
+#lookbook {
+  width: 1200px;
+  margin: 0 auto;
+}
+#banner2 {
+  height: 550px;
+}
 
-.main span{line-height:20px;}
+.main span {
+  line-height: 20px;
+}
 
 /*footer*/
-#footer{
-	background:#252525;
-	text-align:center;
-	color:#fff;
-	position:relative;
-	height:250px;
-	margin-top:150px;
-	width:100%;
-	z-index:5;
+#footer {
+  background: #252525;
+  text-align: center;
+  color: #fff;
+  position: relative;
+  height: 250px;
+  margin-top: 150px;
+  width: 100%;
+  z-index: 5;
 }
 
-
-.f_logo img{
-	width:120px;
+.f_logo img {
+  width: 120px;
 }
 
-.footer1{position:absolute; top:0; left:50%; transform:translateX(-50%); padding-top:70px;}
-.footer1 li{float:left;}
-.footer1 li a{
-	display:block;
-	color:#fff;
-	font-weight:bold;
-	padding:0 10px;
-	text-align:center;
+.footer1 {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-top: 70px;
+}
+.footer1 li {
+  float: left;
+}
+.footer1 li a {
+  display: block;
+  color: #fff;
+  font-weight: bold;
+  padding: 0 10px;
+  text-align: center;
 }
 
-.footer2{position:absolute; top:0; left:50%; transform:translateX(-50%); padding-top:120px;}
-.footer2{clear:both;}
-.footer2 li{float:left;
-	padding:0 10px;
+.footer2 {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-top: 120px;
 }
-.d{padding-top:58px;}
-.e{padding-top:30px;}
+.footer2 {
+  clear: both;
+}
+.footer2 li {
+  float: left;
+  padding: 0 10px;
+}
+.d {
+  padding-top: 58px;
+}
+.e {
+  padding-top: 30px;
+}
 
-.bold{font-weight:700;}
+.bold {
+  font-weight: 700;
+}
